--- a/assets/css/survey.scss
+++ b/assets/css/survey.scss
@@ -3,61 +3,26 @@ $secondaryColor: #374141;
 $questionHeader: #374141;
 
 .survey-container {
-  margin-top: 10px;
+
+  max-width: 900px;
+  margin: 10px auto 0 auto;
 }
 
 #survey-questions-pjax {
   transition: all .2s;
 }
 
-.survey-container, .kv-editable-popover {
-  .form-group {
-    min-width: 50%;
-  }
-  .form-control {
-    padding: 0;
-    height: 23px;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    border-bottom: 1px solid #2196F3;
-    border-radius: 0;
-    background: transparent;
-    width: 100% !important;
-    box-shadow: none !important;
-  }
-  .input-group {
-    .input-group-addon {
-      padding: 0 8px;
-      font-size: 14px;
-      font-weight: normal;
-      line-height: 1;
-      color: #555;
-      text-align: center;
-      background-color: transparent;
-      border: none;
-      border-radius: 4px;
-    }
-    .form-control {
-      padding: 0;
-      height: 23px;
-      border-top: none;
-      border-left: none;
-      border-right: none;
-      border-bottom: 1px solid #2196F3;
-      border-radius: 0;
-      background: transparent;
-      width: 100% !important;
-      box-shadow: none !important;
-    }
-  }
+.survey-container, .kv-editable-popover, #survey-index {
   .btn {
     background-color: transparent;
     color: #393939;
     border-radius: 5px;
     min-width: 28px;
     box-shadow: 0 3px 7px transparent;
-    margin: 7px 3px 10px 4px;
+    margin: 7px 3px;
+    &.btn-xs{
+      padding: 2px 8px;
+    }
     &:hover {
       box-shadow: 0 3px 7px #9a9a9a;
     }
@@ -122,6 +87,49 @@ $questionHeader: #374141;
       }
     }
   }
+}
+.survey-container, .kv-editable-popover {
+  .form-group {
+    min-width: 50%;
+  }
+  .form-control {
+    padding: 0;
+    height: 23px;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 1px solid #2196F3;
+    border-radius: 0;
+    background: transparent;
+    width: 100% !important;
+    box-shadow: none !important;
+  }
+  .input-group {
+    .input-group-addon {
+      padding: 0 8px;
+      font-size: 14px;
+      font-weight: normal;
+      line-height: 1;
+      color: #555;
+      text-align: center;
+      background-color: transparent;
+      border: none;
+      border-radius: 4px;
+    }
+    .form-control {
+      padding: 0;
+      height: 23px;
+      border-top: none;
+      border-left: none;
+      border-right: none;
+      border-bottom: 1px solid #2196F3;
+      border-radius: 0;
+      background: transparent;
+      width: 100% !important;
+      box-shadow: none !important;
+    }
+  }
+
   .has-success .form-control {
     border-color: #009688;
   }
@@ -132,7 +140,7 @@ $questionHeader: #374141;
     background: #fff;
     padding: 15px;
     border-radius: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     position: relative;
     box-shadow: 0 2px 15px rgba(0, 0, 0, 0.14);
     .survey-name-wrap, .survey-question-name-wrap, .survey-question-view-wrap {
@@ -264,35 +272,50 @@ $questionHeader: #374141;
       width: 50px;
       display: inline-block;
       text-align: center;
-      input{
+      input {
         text-align: center;
       }
-      .points-title{
+      .points-title {
         font-size: 12px;
         color: #afafaf;
       }
     }
-    .checkbox-inline{
+    .checkbox-inline {
       min-width: initial;
-      label{
+      label {
         font-weight: 300;
       }
     }
-    .survey-questions-form-field-inline{
+    .survey-questions-form-field-inline {
       margin: 10px;
-      input{
+      input {
         width: 40px !important;
         text-align: center;
 
       }
     }
-    .inline-input{
+    .inline-input {
       display: flex;
       flex-wrap: nowrap;
-      label{
+      label {
         flex-shrink: 0;
       }
     }
+  }
+  .pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus {
+
+    background-color: #374141;
+    border: none;
+  }
+  .pagination > .active > a{
+    color: #eee;
+  }
+
+  .pagination > li > a, .pagination > li > span {
+    padding: 3px 10px;
+    border-radius: 4px;
+    border: none;
+    color: #607D8B;
   }
 }
 
@@ -303,7 +326,7 @@ $questionHeader: #374141;
 
 .survey-container {
   .survey-btn {
-    margin: 20px auto;
+    margin: 10px auto;
   }
 }
 
@@ -313,12 +336,12 @@ $questionHeader: #374141;
   }
 }
 
-#survey-index{
+#survey-index {
   margin-top: 20px;
-  .summary{
+  .summary {
     margin: 15px 0;
   }
-  .survey-card{
+  .survey-card {
     background: #fff;
     padding: 10px;
     box-shadow: 0 2px 11px rgba(0, 0, 0, 0.07);
@@ -329,25 +352,24 @@ $questionHeader: #374141;
     align-items: center;
     position: relative;
     transition: box-shadow .3s;
-    &:hover{
+    &:hover {
       box-shadow: 1px 5px 11px rgba(0, 0, 0, 0.13);
     }
-    .status{
-      width: 10px;
-      height: 10px;
-      background-color: #d8d8d8;
-      border-radius: 50%;
+    .status {
+      width: 3px;
       align-self: baseline;
       position: absolute;
-      right: 8px;
-      &.active{
+      left: 0;
+      height: 100%;
+      top: 0;
+      &.active {
         background-color: #88f367;
       }
-      &.closed{
+      &.closed {
         background-color: #ff6a6a;
       }
     }
-    .image{
+    .image {
       display: inline-block;
       vertical-align: middle;
       width: 40px;
@@ -359,17 +381,19 @@ $questionHeader: #374141;
       line-height: 40px;
       font-size: 20px;
     }
-    .description{
+    .description {
       display: flex;
       flex-grow: 1;
       justify-content: space-between;
       vertical-align: middle;
-      .name{
+      .name {
         margin: 0 10px;
       }
-      .survey-labels{
+      .survey-labels {
         margin-right: 10px;
-        .survey-label{
+        display: flex;
+        align-items: center;
+        .survey-label {
           background-color: #607d8b;
           color: #fff;
           padding: 2px 5px;
@@ -378,29 +402,163 @@ $questionHeader: #374141;
           display: inline-block;
           text-align: center;
           margin: 0 5px;
-          &.respondents{
+          &.respondents {
             background-color: #9C27B0;
           }
         }
       }
     }
   }
-  .pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus {
 
-    background-color: #374141;
-    border: none;
-  }
 
-  .pagination > li > a, .pagination > li > span {
-    padding: 3px 10px;
-    border-radius: 4px;
-    border: none;
-    color: #607D8B;
-  }
-
-  .pagination>.active>a{
+  .pagination > .active > a {
     color: #fff;
   }
 
 }
 
+#survey-title {
+  background: $primaryColor;
+  padding: 10px 20px;
+  margin: 0 -15px;
+  color: #fff;
+  display: flex;
+  flex-grow: 1;
+  justify-content: space-between;
+  vertical-align: middle;
+  align-items: center;
+  margin-bottom: 50px;
+  .survey-labels {
+    margin-right: 10px;
+    .survey-label {
+      background-color: #607d8b;
+      color: #fff;
+      padding: 2px 5px;
+      border-radius: 15px;
+      min-width: 40px;
+      display: inline-block;
+      text-align: center;
+      margin: 0 5px;
+      &.respondents {
+        background-color: #9C27B0;
+      }
+      &:hover{
+        text-decoration: none;
+      }
+    }
+  }
+}
+
+#survey-view {
+  .survey-container .survey-block, .kv-editable-popover .survey-block {
+    margin-bottom: 55px;
+  }
+  .survey-question-name-wrap {
+    font-size: 16px;
+    font-weight: 600;
+  }
+}
+
+#survey-respondents-pjax {
+  #survey-respondents-list {
+    margin-top: 20px;
+    .summary {
+      margin-bottom: 15px;
+    }
+    .item {
+      padding: 10px;
+      background: #fff;
+      box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
+      margin: 8px 0;
+      transition: all .3s;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      &:hover {
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.13);
+      }
+    }
+  }
+}
+
+#remote-modal {
+  .modal-content {
+    background: rgba(255, 255, 255, 0.83);
+    .modal-body {
+      background: transparent;
+      .buttons{
+        .btn{
+          padding: 4px 9px;
+          margin: 0;
+        }
+      }
+    }
+  }
+}
+
+.tt-menu{
+  .tt-dataset{
+    .disabled{
+      color: #ddd;
+    }
+  }
+}
+
+#survey-widget{
+  #survey-title{
+    align-items: flex-start;
+    height: 300px;
+    display: block;
+    background: $secondaryColor;
+    .subcontainer{
+      max-width: 900px;
+      margin: auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .survey-labels{
+      .survey-label{
+        background: #03A9F4;
+        border-radius: 5px;
+        font-size: 13px;
+      }
+    }
+  }
+  .survey-container{
+    margin-top: -270px;
+  }
+  #survey-questions{
+    .radio-group, .checkbox-group{
+      label{
+        display: flex;
+        align-items: center;
+        font-weight: initial;
+        &>input{
+          margin-right: 15px;
+        }
+        .text{
+          img{
+            max-width: 100%;
+            height: auto !important;
+          }
+        }
+      }
+    }
+    .survey-question-descr-wrap{
+      margin: 0 15px;
+    }
+    .survey-block{
+      margin-bottom: 50px;
+      .answer-item{
+        display: flex;
+        align-items: center;
+        margin: 0 10px;
+      }
+      .survey-question-descr-wrap{
+        border-bottom: 1px solid #ddd;
+        margin-bottom: 20px;
+      }
+    }
+  }
+}
